# gridbert

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.fly  GRIDBERT_DESIGN_SYSTEM.md  README.md  docker-compose.yml  fly.toml  iteration_commentary.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/components/Chat/: ChatDrawer.tsx  (+4 more)
frontend/src/hooks/: useChat.ts
frontend/src/stores/: authStore.ts  chatStore.ts  dashboardStore.ts
gridbert/: agent.py  config.py  crypto.py  main.py  models.py  personality.py  report.py  storage.py
gridbert/agent/: __init__.py  loop.py  registry.py  tool_registry.py  types.py
gridbert/api/: __init__.py  admin_dashboard.html  app.py  deps.py  rate_limit.py  run.py
gridbert/api/routes/: __init__.py  admin.py  auth.py  chat.py  dashboard.py  settings.py  waitlist.py
gridbert/data/: beg_providers.json  foerderungen.json
gridbert/email/: __init__.py  templates.py
gridbert/llm/: __init__.py  claude_provider.py  openai_provider.py  types.py
gridbert/models/: __init__.py  battery.py  beg.py  energy_news.py  gas.py  invoice.py  load_profile.py  pv.py  report.py  smart_meter.py  spot.py  tariff.py
gridbert/prompts/: __init__.py  domain.py  journey.py  personality.py  rules.py  tools.py
gridbert/storage/: __init__.py  database.py  schema.py
gridbert/storage/repositories/: __init__.py  allowlist_repo.py  chat_repo.py  file_repo.py  memory_repo.py  switching_repo.py  user_repo.py
gridbert/tools/: __init__.py  battery_sim.py  beg_advisor.py  energy_monitor.py  file_utils.py  gas_compare.py  invoice_parser.py  load_profile.py  pv_sim.py  smartmeter.py  spot_analysis.py  switching.py  tariff_compare.py  web_search.py
gridbert/tools/smartmeter_providers/: __init__.py  netz_noe.py  wiener_netze.py
gridbert/web/: __init__.py  app.py  chat.py  sse.py
gridbert/web/static/: style.css
gridbert/web/templates/: base.html  history.html  history_detail.html  index.html  progress.html
homeassistant/: README.md
scripts/: check_core_boundary.py
tests/: conftest.py
tests/integration/: test_auth.py  test_chat.py  test_settings_api.py
tests/storage/: test_repos.py
tests/unit/: test_agent_loop.py  test_crypto.py  test_energy_monitor.py  test_file_repo.py  test_llm_providers.py  test_load_profile.py  test_tool_registry.py  test_types.py
(+30 files in other folders)
