# Gridbert — Persönlicher Energie-Agent für österreichische Konsumenten
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "gridbert"
version = "0.1.0"
description = "Persönlicher Energie-Agent — Zeig mir was ich spare"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "flask>=3.0",
    "markdown>=3.5",
]

[project.scripts]
gridbert = "gridbert.main:main"
gridbert-web = "gridbert.web.app:run_web"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gridbert*"]
